# Ohms

./: .env.example  .gitattributes  .gitignore  .replit  Dockerfile  HARDENING_NOTES.md  INDEX.md  README.md  main.py  pyproject.toml  replit.nix  requirements.txt
docker-gateway/: README.md  ohms-gateway.example.yaml
docs/: doordash_browser_contract.md  phase2_checklist.md  replit_runbook.md  secret_rotation_runbook.md  ui_surface_contracts.md
ohms/: __init__.py  auth.py  correlation.py  health.py  idempotency.py  logging_setup.py  rate_limit.py  scope_check.py  shopify.py  tools.py  validators.py
scripts/: bootstrap_git.ps1  verify_connection.py
tests/: test_auth.py  test_idempotency.py  test_shopify_client.py  test_validators.py
