[project]
name = "ohms"
version = "0.1.0"
description = "OHMS — Flauraly Order Hub Management System (MCP Server)"
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]>=1.0.0",
  "uvicorn>=0.30",
  "starlette>=0.37",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "pydantic>=2.7",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
